--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+
+@media (max-width:360px){html{font-size:4px;}}
+@media (min-width:361px) and (max-width:400px){html{font-size:5px;}}
+@media (min-width:400px) and (max-width:480px){html{font-size:5px;}}
+@media (min-width:480px) and (max-width:640px){html{font-size:6px;}}
+@media (min-width:640px) and (max-width:720px){html{font-size:7px;}}
+@media (min-width:720px) and (max-width:800px){html{font-size:8px;}}
+@media (min-width:800px) and (max-width:880px){html{font-size:9px;}}
+@media (min-width:880px){html{font-size:10px;}}
+
+:root {
+    --blue: #54a0ff;
+    --darkBlue: #2e86de;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section {
+    padding: 5rem 0rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.cta-btn{
+    display: inline-block;
+    position: relative;
+    padding: 0.8rem 1rem;
+    border: 2px var(--blue) solid;
+    border-radius: 1rem;
+    cursor: pointer;
+    text-align: center;
+    
+    color: #333;
+    transition:all 0.9s, color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.cta-btn:hover {
+    color:#fff;
+    box-shadow: 0 60px 0 0 var(--blue) inset,
+                0 -60px 0 0 var(--blue) inset;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-color-main {
+    color: var(--blue);
 }
+
