--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ section {
 .cta-btn{
     display: inline-block;
     position: relative;
-    padding: 0.8rem 1rem;
+    padding: 0.4rem 1rem;
     border: 2px var(--blue) solid;
     border-radius: 1rem;
     cursor: pointer;
@@ -36,6 +36,7 @@ section {
 
 .cta-btn:hover {
     color:#fff;
+    text-decoration: none;
     box-shadow: 0 60px 0 0 var(--blue) inset,
                 0 -60px 0 0 var(--blue) inset;
 }
