--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,12 +1,7 @@
 .projects-wrapper {
-    height: fit-content;
-    width: 100;
     display: flex;
     flex-direction: column;
     text-align: center;
-    background: lightgray;
-    font-weight: 400;
-    margin: auto;
     padding-top: 2rem;
 }
 .projects-wrapper-sm {
@@ -16,7 +11,38 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    background: var(--blue);
-    font-weight: 400;
     margin: auto;
+}
+
+.project-wrapper__row {
+    margin-bottom: 5rem;
+}
+
+.project-wrapper__text-title {
+    font-size: 2.5rem;
+    margin: 1.8rem 0;
+    font-weight: bold;
+}
+.projects-wrapper-sm .project-wrapper__text-title {
+    font-size: 4rem;
+}
+
+.project-wrapper__text {
+    font-size: 2rem;
+}
+.projects-wrapper-sm .project-wrapper__text {
+    font-size: 4rem;
+}
+
+.projects-wrapper .cta-btn {
+    font-size: 1.6rem;
+    margin: 1rem 0.5rem;
+}
+.projects-wrapper-sm .cta-btn {
+    font-size: 3.2rem;
+    margin: 1.4rem 1.4rem;
+}
+
+.project-wrapper__image {
+    height: 100%;
 }
