small design & file changes

--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -3,7 +3,7 @@
     color: white;
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: 3rem;
+    margin: 3rem 0;
 }
 
 .section-title-blue {
