--- a/src/components/Image/ProjectImg.css
+++ b/src/components/Image/ProjectImg.css
@@ -2,9 +2,14 @@
     object-fit: cover;
     object-position: center center;
     width: 100%;
-    height: 100%;    
+    height: 100%;
+    max-height: 350px;    
 
     position: relative;
+    top: 0px;
+    left: 0px;
+
+    box-shadow: 0 0.3rem 0.8rem rgba(0,0,0,0.1);
 }
 
 .projectImg-sm {
@@ -12,7 +17,10 @@
     object-position: center center;
     width: 100%;
     height: 100%;    
+    max-height: 300px;
+    min-height: 200px;
 
     position: relative;
+    box-shadow: 0 0.3rem 0.8rem rgba(0,0,0,0.1);
 }
 
