--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,14 @@
     cursor: pointer;
     width: 5rem;
     height: 5rem;
-    font-size: 2rem;
+    font-size: 2.2rem;
+}
+
+.hoverY {
+    transition: all 0.2s ease-in;
+}
+.hoverY:hover {
+    transform: translateY(-4px);
 }
 
 .social-links {
@@ -20,7 +27,7 @@
 
 .social-links a {
     color: white;
-    font-size: 3rem;
+    font-size: 3.4rem;
     width: 5rem;
     height: 5rem;
     margin: 1.6rem;
