--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,6 @@
+#projects {
+}
+
 .projects-wrapper {
     display: flex;
     flex-direction: column;
@@ -12,6 +15,7 @@
     text-align: center;
     justify-content: center;
     margin: auto;
+    padding: 4rem 0;
 }
 
 .project-wrapper__row {
