--- a/src/components/WorldMap/WorldMap.css
+++ b/src/components/WorldMap/WorldMap.css
@@ -1,12 +1,67 @@
+#worldmap {
+    background-color: var(--blue);
+    text-align: center;
+    padding: 4rem 0;
+}
+
+#worldmap .container {
+    display: flex;
+    flex-direction: column;
+}
 
 .worldmap-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+}
+.worldmap-wrapper-sm {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.country-container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    border-radius: 5rem 0 5rem 0;
+    padding: 3rem;
+    cursor: pointer;
+    text-decoration: none;
+    transition:all 0.9s, color 0.3s;
+
+}
+
+.country-container img {
+    width: 80%;
+    transition: all 0.9s;
+}
+
+.country-container:hover{
+    text-decoration: none;
+    box-shadow: 3rem 3rem 0.1rem 0 rgba(84,160,255,0.95) inset,
+                -3rem -3rem 0.1rem 0 rgba(84,160,255,0.95) inset;
+}
+
+.country-container:hover .country-name{
+    font-size: 3.4rem;
+}
+.country-container:hover img{
+    transform: scale(1.1);
+}
+
+.country-name {
+    font-size: 3rem;
+    transition: all 0.9s;
+}
+
+/* .worldmap-wrapper {
     height: fit-content;
     display: flex;
     flex-direction: column;
     text-align: center;
     background: var(--blue);
-    /* font-weight: 400; */
-    /* margin: auto; */
     padding-bottom: 2rem;
     min-height: 50vh;
 }
@@ -18,8 +73,6 @@
     text-align: center;
     justify-content: center;
     background: var(--blue);
-    /* font-weight: 400; */
-    /* margin: auto; */
     padding-bottom: 2rem;
     min-height: 30vh;
 }
@@ -64,4 +117,4 @@
 .country-name {
     font-size: 3rem;
     transition: all 0.9s;
-}
+} */
