--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,54 +2,58 @@
 }
 
 .projects-wrapper {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 2rem;
 }
 .projects-wrapper-sm {
-    min-height: 30vh;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    padding: 4rem 0;
+  min-height: 30vh;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+  padding: 4rem 0;
 }
 
 .project-wrapper__row {
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 }
 
 .project-wrapper__text-title {
-    font-size: 2.5rem;
-    margin: 1.8rem 0;
-    font-weight: bold;
+  font-size: 2.5rem;
+  margin: 1.8rem 0;
+  font-weight: bold;
 }
 .projects-wrapper-sm .project-wrapper__text-title {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 .project-wrapper__text {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 .projects-wrapper-sm .project-wrapper__text {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 .projects-wrapper .cta-btn {
-    font-size: 1.6rem;
-    margin: 1rem 0.5rem;
+  font-size: 1.6rem;
+  margin: 1rem 0.5rem;
 }
 .projects-wrapper-sm .cta-btn {
-    font-size: 3.2rem;
-    margin: 1.4rem 1.4rem;
+  font-size: 3.2rem;
+  margin: 1.4rem 1.4rem;
 }
 
 .project-wrapper__image {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.credential-info label {
+  color: #da291c !important;
 }
